reverting back to debian and adding installer of ruby

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/ruby:2.4.2-jessie-node
+      - image: debian:stretch
 
     steps:
       - checkout
@@ -11,7 +11,7 @@ jobs:
           name: Install pre-reqs
           command: |
             export TF_VERSION="0.12.3"
-            apt-get update && apt-get -y install curl unzip
+            apt-get update && apt-get -y install curl unzip ruby-full
             curl -skO -L https://releases.hashicorp.com/terraform/${TF_VERSION}/terraform_${TF_VERSION}_linux_amd64.zip
             unzip -o terraform_${TF_VERSION}_linux_amd64.zip -d /usr/local/bin/
             terraform --version
