--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
             terraform plan
       - run:
           name: Install ruby stuff + TF Kitchen
-          command: |
-            gem install kitchen-terraform --version 4.0.0
+          command: 
+            bundle install
       - store_test_results: # Upload test results for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
           path: test_results
