--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,5 +23,10 @@ jobs:
           command: |
             gem install bundler
             bundle install
+      - run:
+          name: Move test result files into tests path
+          command: |
+            find /var/lib/gems/ -name mkmf.log -exec cp "{}" project/test_results/ \;
+
       - store_test_results: # Upload test results for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
           path: test_results
