--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,8 @@ jobs:
       - run:
           name: Move test result files into tests path
           command: |
-            find /var/lib/gems/ -name mkmf.log -exec cp "{}" ~/project/test_results/ \;
+            find /var/lib/gems/ -name mkmf.log -exec cp "{}" /tmp/ruby_logs \;
+          when: on_fail
 
-      - store_test_results: # Upload test results for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
-          path: test_results
+      - store_artifacts:
+          path: /tmp/ruby_logs
