--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,18 +9,25 @@ jobs:
           name: Install pre-reqs
           command: |
             export TF_VERSION="0.12.3"
-            apt-get update && apt-get -y install curl unzip ruby-full
+            apt-get update && apt-get -y install curl unzip
             curl -skO -L https://releases.hashicorp.com/terraform/${TF_VERSION}/terraform_${TF_VERSION}_linux_amd64.zip
             unzip -o terraform_${TF_VERSION}_linux_amd64.zip -d /usr/local/bin/
             terraform --version
-      - run:
-          name: Run Terraform plan
-          command: |
-            terraform init
-            terraform plan
+      # - run:
+      #     name: Run Terraform plan
+      #     command: |
+      #       terraform init
+      #       terraform plan
       - run:
           name: Install ruby stuff + TF Kitchen
           command: |
+            curl -sSL https://rvm.io/mpapis.asc | sudo gpg2 --import -
+            curl -sSL https://get.rvm.io | sudo bash -s stable
+            source /etc/profile.d/rvm.sh
+            rvm requirements
+            rvm install 2.4.1
+            rvm use 2.4.1 --default
+            ruby --version
             gem install kitchen-terraform
       - run:
           name: Move test result files into tests path
