--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,8 +21,8 @@ jobs:
       - run:
           name: Install ruby stuff + TF Kitchen
           command: |
-            curl -sSL https://rvm.io/mpapis.asc | sudo gpg2 --import -
-            curl -sSL https://get.rvm.io | sudo bash -s stable
+            curl -sSL https://rvm.io/mpapis.asc | gpg2 --import -
+            curl -sSL https://get.rvm.io | bash -s stable
             source /etc/profile.d/rvm.sh
             rvm requirements
             rvm install 2.4.1
