adding Docker stuff

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,29 +13,34 @@ jobs:
             curl -skO -L https://releases.hashicorp.com/terraform/${TF_VERSION}/terraform_${TF_VERSION}_linux_amd64.zip
             unzip -o terraform_${TF_VERSION}_linux_amd64.zip -d /usr/local/bin/
             terraform --version
+      - run:
+          name: Run Terraform plan
+          command: |
+            terraform init
+            terraform plan
+      - name:
+          name: Build Docker image
+          command: |
+            cd Docker && docker build -t python-upload-s3 .
+            docker tag python-upload-s3:latest
       # - run:
-      #     name: Run Terraform plan
+      #     name: Install ruby stuff + TF Kitchen
       #     command: |
-      #       terraform init
-      #       terraform plan
-      - run:
-          name: Install ruby stuff + TF Kitchen
-          command: |
-            mkdir ~/.gnupg && echo "disable-ipv6" >> ~/.gnupg/dirmngr.conf
-            gpg2 --keyserver hkp://pool.sks-keyservers.net --recv-keys 409B6B1796C275462A1703113804BB82D39DC0E3 7D2BAF1CF37B13E2069D6956105BD0E739499BDB
-            curl -sSL https://rvm.io/mpapis.asc | gpg2 --import -
-            curl -sSL https://get.rvm.io | bash -s stable
-            source /etc/profile.d/rvm.sh
-            rvm requirements
-            rvm install 2.4.1
-            rvm use 2.4.1 --default
-            ruby --version
-            gem install kitchen-terraform
-      - run:
-          name: Move test result files into tests path
-          command: |
-            find /var/lib/gems/ -name mkmf.log -exec cp "{}" /tmp/ruby_logs \;
-          when: on_fail
+      #       mkdir ~/.gnupg && echo "disable-ipv6" >> ~/.gnupg/dirmngr.conf
+      #       gpg2 --keyserver hkp://pool.sks-keyservers.net --recv-keys 409B6B1796C275462A1703113804BB82D39DC0E3 7D2BAF1CF37B13E2069D6956105BD0E739499BDB
+      #       curl -sSL https://rvm.io/mpapis.asc | gpg2 --import -
+      #       curl -sSL https://get.rvm.io | bash -s stable
+      #       source /etc/profile.d/rvm.sh
+      #       rvm requirements
+      #       rvm install 2.4.1
+      #       rvm use 2.4.1 --default
+      #       ruby --version
+      #       gem install kitchen-terraform
+      # - run:
+      #     name: Move test result files into tests path
+      #     command: |
+      #       find /var/lib/gems/ -name mkmf.log -exec cp "{}" /tmp/ruby_logs \;
+      #     when: on_fail
 
       - store_artifacts:
-          path: /tmp/ruby_logs
+          path: /tmp/artifacts
