--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,16 @@ jobs:
     steps:
       - checkout
       - setup_remote_docker
+          docker_layer_caching: true
+          version: 18.09.3
+      - run:
+          name: Install Docker client
+          command: |
+            set -x
+            VER="18.09.3"
+            curl -L -o /tmp/docker-$VER.tgz https://download.docker.com/linux/static/stable/x86_64/docker-$VER.tgz
+            tar -xz -C /tmp -f /tmp/docker-$VER.tgz
+            mv /tmp/docker/* /usr/bin
       - run:
           name: Install pre-reqs
           command: |
