--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,7 @@ jobs:
           command: |
             cd docker && docker build -t python-upload-s3 .
             echo "Using ${ECR_REPO}"
-            $(aws ecr get-login --no-include-email --region eu-west-1)
+            $(aws ecr get-login --region eu-west-1)
             docker tag python-upload-s3:latest ${ECR_REPO}/python-upload-s3:1.0
             docker push ${ECR_REPO}/python-upload-s3:1.0
       # - run:
