--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,7 @@ jobs:
             mv /tmp/docker/* /usr/bin
             docker version ## Gets version of client AND Server
             terraform --version
+            aws --version
             mkdir -p /tmp/artifacts ## Making the artifacts dir, not sure why I need to.
       - run:
           name: Run Terraform plan
@@ -37,7 +38,7 @@ jobs:
           command: |
             cd docker && docker build -t python-upload-s3 .
             echo "Using ${ECR_REPO}"
-            $(aws ecr get-login --region eu-west-1)
+            $(aws ecr get-login --no-include-email --region eu-west-1)
             docker tag python-upload-s3:latest ${ECR_REPO}/python-upload-s3:1.0
             docker push ${ECR_REPO}/python-upload-s3:1.0
       # - run:
