--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,6 +45,7 @@ jobs:
             docker tag example-repo-s3-put:latest ${ECR_REPO}:latest
             docker push ${ECR_REPO}:latest
             docker tag example-repo-s3-put:latest ${ECR_REPO}:${CIRCLE_SHA1}
+            docker push ${ECR_REPO}:${CIRCLE_SHA1}
       # - run:
       #     name: Install ruby stuff + TF Kitchen
       #     command: |
